# mpc

src/: CMakeLists.txt  reader.cpp  writer.cpp
src/communicator/: Writer.cpp  Writer.h
src/service/: MpcServer.cpp  MpcServer.h
src/socketlib/: CMakeLists.txt  simple_server_main.cpp
src/utils/: macros.h
